--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
 
             <div class="center bold">GULA AREN SANKU</div>
             <div class="center small">Manis dan Wangi, 100% Asli Tanpa Pengawet</div>
+            <div class="center small">(+62) 851 5541 7755</div>
 
             <div class="divider"></div>
 
