--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         </div>
 
         <div class="button-group ui-only">
-            <button onclick="exportPNG()">Export PNG</button>
+            <button onclick="exportPNG()">Share Receipt</button>
         </div>
 
         <!-- RECEIPT -->
